# two-cell-influenza

./: CMakeLists.txt  README.md  config.ini
include/: config.h  instance.h
include/utilities/: common.h  random_machine.h  vector_operations.h
src/: app_infection.cpp  config.cpp
src/utilities/: common.cpp  vector_operations.cpp
